# webfinger-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/client/: client.rs  mod.rs  urlbuilder.rs
src/resource/: debug.rs  deserialize.rs  display.rs  equality.rs  mod.rs  resource.rs  serialize.rs  tests.rs
