[package]
name = "webfinger"
version = "0.1.0"
authors = ["Adrian Malacoda <adrian.malacoda@monarch-pass.net>", "kenkeiras <kenkeiras@codigoparallevar.com>"]

[dependencies]
log = "0.3.6"
env_logger = "0.4.0"
url = "1.4.0"
serde = "0.9.13"
serde_derive = "0.9"
serde_json = "0.9.10"
reqwest = "0.5.1"
